<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">SUNSHINE</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_setting">SettingActivity</string>
    <string name="location">location</string>
    <string name="title" translatable="false">Plz enter a location</string>
    <string name="def_value" translatable="false">800001</string>
    <string name="unit_metric">metric</string>
    <string name="dialog_title">UNITS please</string>
    <string name="units_prefs">units_prefs</string>
    <string name="map_resource">Map</string>
    <string name="share">SHARE</string>
    <string name="notification">noti</string>
    <string name="today">Today</string>
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.dell.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="prefs_enable_location_status">LocationStatus</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string-array name="unit_entries">
        <item>METRIC</item>
        <item>IMPERIAL</item>
    </string-array>

    <string-array name="unit_entryValue">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_location_default">800023</string>
    <string name="pref_units_key">units</string>
    <string name="pref_location_latitude" translatable="false">loc-latitude</string>
    <string name="pref_location_longitude"  translatable="false">loc-longitude</string>
    <string name="min_text">21</string>
    <string name="min_text1">8</string>
    <string name="date">Tomorrow</string>
    <string name="desc">Clear</string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>


    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
<string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
<string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
</string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="title_activity_delete">delete</string>
    <string name="hard_degree">21°</string>
    <string name="hard_low">11°</string>
    <string name="empty_view">No Weather Information To display</string>
    <string name="network_error">Sorry No Network Conection..</string>
    <string name="empty_forecast_list_no_network">Sorry No Network connection</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data</string>
    <string name="empty_forecast_list_server_invalid">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_setting_unknown">There is error in your Location Setting.Bad input !!!</string>
    <string name="empty_forecast_invalid_setting">Bad Input!!! Change the location</string>

    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="main_weather_desp">icon for weather description</string>
    <string name="today_image_desc">today\'s weather image</string>

    <string name="format_art_url" translatable="false">https://github.com/udacity/Sunshine-Version-2/tree/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

        <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
        <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
        <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
        <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="detail_icon_transition_name">transitionIcon</string>
    <string name="details_transition_name">iconView</string>
    <string name="attribution_text">Powered By Google</string>
    <string name="title_widget_today">Today Widget</string>
    <string name="empty_forecast_list">Sorry Babe..No Data</string>
    <string name="muzei_description">Muzei library</string>


</resources>

