<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:columnCount="2">

    <Space
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />


    <TextView
        android:id="@+id/detail_date_textview"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/secondary_text"
        app:layout_columnWeight="1"
        tools:text="Tomorrow,June 24" />

    <ImageView
        android:id="@+id/detail_icon"
        android:transitionName="@string/details_transition_name"
        android:layout_width="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/today_image_desc"
        android:maxHeight="@dimen/today_icon"
        android:maxWidth="@dimen/today_icon"
        app:layout_columnWeight="1"
        app:layout_gravity="fill_horizontal"
        tools:src="@drawable/ic_launch" />

    <TextView


        android:id="@+id/detail_high_textview"
        android:layout_width="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/hard_degree"
        android:textColor="@color/primary_text"
        android:textSize="72sp"
        app:layout_columnWeight="1"

        app:layout_gravity="fill_horizontal" />

    <TextView
        android:id="@+id/detail_forecast_textview"
        android:layout_width="0dp"
        app:layout_gravity="fill_horizontal"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/secondary_text"
        app:layout_columnWeight="1"
        tools:text="Rainy" />

    <TextView
        android:id="@+id/detail_low_textview"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/secondary_text"

        android:textSize="36sp"
        app:layout_columnWeight="1"
        tools:text="@string/hard_low" />

    <Space
        app:layout_columnSpan="2"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />


</android.support.v7.widget.GridLayout>